kubernetes/api-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sotaque-api-deployment
  labels:
    app: sotaque-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sotaque-api
  template:
    metadata:
      labels:
        app: sotaque-api
    spec:
      containers:
        - imagePullPolicy: Always
          name: sotaque-api
          image: gabrielmilan/GITHUB_REPO/api:GITHUB_SHA
