kubernetes/db-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: db
spec:
  selector:
    app: db
  ports:
    - port: 5432
