kubernetes/api-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sotaque-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - api-sotaque.gabriel-milan.com
        - api-sotaque-v2.gabriel-milan.com
      secretName: api-sotaque-tls
  rules:
    - host: api-sotaque.gabriel-milan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sotaque-api-service
                port:
                  number: 80
    - host: api-sotaque-v2.gabriel-milan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sotaque-api-service
                port:
                  number: 80
