kubernetes/web-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sotaque-web-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: sotaque.gabriel-milan.com
      http:
        paths:
          - path:
            backend:
              serviceName: sotaque-web-service
              servicePort: 80
